--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,12 @@
  */
 
 plugins {
-    id 'java'
+    id 'java-library'
     id 'application'
 }
 
 group = 'com.exactpro.th2'
 version = release_version
-
 
 repositories {
     jcenter()
@@ -33,15 +32,19 @@ repositories {
 }
 
 dependencies {
-    compile 'com.exactpro.th2:common:2.5.1'
-    compile "com.exactpro.sf:sailfish-common:3.2"
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    compile 'org.jsoup:jsoup:1.13.1'
+    api platform('com.exactpro.th2:bom:2.10.1')
 
-    compile "org.slf4j:slf4j-log4j12:1.7.21"
+    implementation 'com.exactpro.th2:common:2.9.0'
+    implementation 'com.exactpro.th2:grpc-common:2.3.2'
+    implementation "com.exactpro.sf:sailfish-common:3.2"
+    implementation 'org.jsoup:jsoup:1.13.1'
+
+    implementation "org.slf4j:slf4j-log4j12"
 
     compileOnly "org.projectlombok:lombok:1.18.12"
     annotationProcessor "org.projectlombok:lombok:1.18.12"
+
+    testCompileOnly 'junit:junit:4.12'
 }
 
 jar {
