--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,13 @@ group = 'com.exactpro.th2'
 version = release_version
 
 repositories {
-    jcenter()
     maven {
-        name 'Bintray'
-        url 'https://dl.bintray.com/exactpro/th2'
+        name 'Sonatype_snapshots'
+        url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
+    }
+    maven {
+        name 'Sonatype_releases'
+        url 'https://s01.oss.sonatype.org/content/repositories/releases/'
     }
     flatDir {
         dirs "lib"
@@ -32,11 +35,10 @@ repositories {
 }
 
 dependencies {
-    api platform('com.exactpro.th2:bom:2.10.1')
+    api platform('com.exactpro.th2:bom:3.0.0')
 
-    implementation 'com.exactpro.th2:common:3.0.0'
-    implementation 'com.exactpro.th2:grpc-common:3.0.0'
-    implementation "com.exactpro.sf:sailfish-common:3.2"
+    implementation 'com.exactpro.th2:common:3.13.4'
+    implementation "com.exactpro.sf:sailfish-common:3.2.1684"
     implementation 'org.jsoup:jsoup:1.13.1'
 
     implementation "org.slf4j:slf4j-log4j12"
